--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
  
     <body>
-        Hello World!
-<img src="12.jpg" alt="Italian Trulli">
+        Welcom to Aissms IOIT!
+<img src="aissmsimg.jpg" alt="Italian Trulli">
     </body>
 </html>
